--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@capacitor/splash-screen": "^1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@capacitor/storage": "^1.2.3",
+    "@ionic-native/file": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "cordova-plugin-file": "^6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
