--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@capacitor-community/sqlite": "^3.3.3-1",
     "@capacitor/android": "3.3.3",
     "@capacitor/app": "1.0.7",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.3.3",
     "@capacitor/device": "^1.1.1",
+    "@capacitor/filesystem": "^1.1.0",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/splash-screen": "^1.2.0",
@@ -35,6 +37,7 @@
     "@capacitor/storage": "^1.2.3",
     "@ionic-native/file": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "cordova-plugin-file": "^6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
