--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@angular/platform-browser-dynamic": "^13.1.1",
     "@angular/router": "^13.1.1",
     "@capacitor-community/sqlite": "^3.3.3-1",
-    "@capacitor/android": "3.3.3",
-    "@capacitor/app": "1.0.7",
+    "@capacitor/android": "^3.5.1",
+    "@capacitor/app": "^1.1.1",
     "@capacitor/camera": "^1.3.1",
-    "@capacitor/core": "3.3.3",
-    "@capacitor/device": "^1.1.1",
+    "@capacitor/core": "^3.5.1",
+    "@capacitor/device": "^1.1.2",
     "@capacitor/filesystem": "^1.1.0",
-    "@capacitor/haptics": "1.1.3",
-    "@capacitor/keyboard": "1.2.0",
-    "@capacitor/splash-screen": "^1.2.0",
-    "@capacitor/status-bar": "1.0.6",
-    "@capacitor/storage": "^1.2.3",
+    "@capacitor/haptics": "^1.1.4",
+    "@capacitor/keyboard": "^1.2.2",
+    "@capacitor/splash-screen": "^1.2.2",
+    "@capacitor/status-bar": "^1.0.8",
+    "@capacitor/storage": "^1.2.5",
     "@ionic-native/file": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
@@ -55,7 +55,7 @@
     "@angular/compiler-cli": "^13.1.1",
     "@angular/core": "^13.1.1",
     "@angular/language-service": "~13.0.0",
-    "@capacitor/cli": "3.3.3",
+    "@capacitor/cli": "^3.5.1",
     "@ionic/angular-toolkit": "^5.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
